[Tue 15 sep 2026] add recent events api
